--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,6 +1,6 @@
 <div class="bar_container">
   <div class="bar_log">
-    <img src="" alt="" srcset="">
+    <img src="assets/ps-logo.png" alt="" srcset="">
   </div>
   <div class="bar_item">
     <ul>
