--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,11 +1,49 @@
 .bar_container{
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 
   position: fixed;
   z-index: 1;
 
   background-color: #ffffff;
   width: 100%;
+  height: 3em;
+
+  box-shadow: 0 0 6px 0 #00000080;
+}
+
+img {
+  width: 140px;
+  height: 32px;
+}
+
+.bar_log{
+  margin-left: 4em;
+}
+
+.bar_item ul{
+  display: flex;
+  text-decoration: none;
+  list-style: none;
+}
+
+.bar_item ul li{
+  padding: 1em;
+  margin-right: 15px;
+}
+
+.bar_item ul li a{
+  text-decoration: none;
+  color: #070707;
+  padding: 5px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+.bar_item ul li a:hover{
+  color: #0000ff;
+  font-weight: 600;
 }
 
