done: Card-Label

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,1 +1,5 @@
-<p>card works!</p>
+<a href="#" class="card_container">
+  <img id="card_img" src="assets/bt-5.jpg" alt="">
+  <app-card-label gameLabel="Digitar"></app-card-label>
+  <app-card-price></app-card-price>
+</a>
