--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,12 +1,11 @@
 .home_container{
   width: 90%;
   margin: 0 auto;
-  padding-top: 1em;
 
   display: flex;
   justify-content: space-around;
   align-items: baseline;
   flex-wrap: wrap;
 
-  border: 2px solid wheat;
+  border: 2px solid red;
 }
