fix: Cads and home

--- a/src/app/components/card/card-label/card-label.component.css
+++ b/src/app/components/card/card-label/card-label.component.css
@@ -17,7 +17,7 @@
   font-size: 1em;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
-  text-transform: capitalize;
+  text-transform: uppercase;
 
   height: 2em;
   padding: 0 1.5em;
