--- a/src/app/components/card/card-price/card-price.component.html
+++ b/src/app/components/card/card-price/card-price.component.html
@@ -1,1 +1,14 @@
-<p>card-price works!</p>
+<div class="card-price_container">
+  <div class="price_title">
+    <h3>{{gameName}}</h3>
+  </div>
+  <div class="price_value">
+    <div class="value_console">
+      <span>|</span>
+      <p>{{gameType}}</p>
+    </div>
+    <div class="value_price">
+      <p id="price">{{price}}</p>
+    </div>
+  </div>
+</div>
