--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,25 @@
 <div class="home_container">
-  <app-card></app-card>
+  <app-card
+    gameName="Battlefield 1"
+    gameCover="assets/bt-1.jpg"
+    gameLabel="Exclusive"
+    gameType="Digital PS4"
+    price="R$ 99,99"
+  ></app-card>
+  <app-card
+    gameName="Battlefield 4"
+    gameCover="assets/bt-4.jpg"
+    gameLabel="Digital"
+    gameType="XPTO | PS4"
+    price="R$ 119,99"
+  ></app-card>
+  <app-card
+    gameName="Battlefield 5"
+    gameCover="assets/bt-5.jpg"
+    gameLabel="Exclusive"
+    gameType="XPTO | PS4"
+    price="R$ 219,99"
+  ></app-card>
+
+
 </div>
